--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -2,10 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
+    column-gap: 100px;
+    row-gap: 20px;
+    margin-left: 300px;
     list-style: none;
     margin-left: auto;
     margin-right: auto;
