--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -22,9 +22,9 @@
   align-items: center;
   width: 100%;
   max-width: 900px;
-  background-color: #fff;
+  background-color: #3f51b5;
   border-radius: 3px;
-  overflow: hidden;
+
 }
 
 .SearchForm_button {
@@ -32,15 +32,9 @@
   border: 3px solid black;
   width: 48px;
   height: 48px;
-  border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #777b8f;
   opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
-  outline: none;
 }
 
 .SearchForm-button:hover {
